@@ -2,6 +2,7 @@ NEWS - list of user-visible changes between releases of GRUB
 
 New in 0.5.94:
 * Stage 1 supports both the LBA mode and the CHS mode.
+* The NetBSD and OpenBSD boot bug is fixed.
 
 New in 0.5.93:
 * ELF format of FreeBSD kernel is supported.
